rest service endpoint extended.